# DevToad

./: README.md  pyproject.toml  requirements.txt
dev_toad/: Cargo.toml  config.toml
dev_toad/src/: main.rs
dev_toad/src/files/: structure.rs
devtoad/: agent.py  cli.py  d2p.py  llm.py  run.py
