[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "devtoad"
version = "1.0.0"
license = {file = "LICENSE"}
authors = [
  { name="Max Kieffer", email="max@toadhealth.com" },
  { name="Christian Herman", email="christian@toadhealth.com" },
]
description = "Developer utilities for enhanced productivity and automation"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
keywords = [
    "developer tools",
    "automation",
    "productivity",
    "developer utilities",
    "automation tools",
    "code documentation",
]

[project.urls]
Homepage = "https://github.com/mkieffer1107/devtoad"
Issues = "https://github.com/mkieffer1107/devtoad/issues"

[tool.setuptools]
packages = ["devtoad"]
package-data = {"devtoad" = ["config.json"]}

[project.scripts]
devtoad = "devtoad.devtoad:main"
